--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
-h1 {
-    text-align: center;
-    font-size: 50px;
-    font-weight: 800;
+.app-container {
+    background-color: #ed1d23;
+    width: 100%;
+    min-height: 100vh;
 }
