--- a/src/Components/FormPedidos.css
+++ b/src/Components/FormPedidos.css
@@ -4,32 +4,45 @@
     width: 100%;
     height: 100vh;
     background-color: rgba(36, 36, 36, 0.281);
-    z-index: 200;
+    z-index: 500;
     justify-content: center;
 }
 .pedidos-buttonCerrar {
     position: absolute;
-    top: calc(55vh + 12px);
-    right: 36px;
-    width: 35px;
-    height: 35px;
-    background-color: transparent;
-    border-radius: 50%;
-    border: solid 3px #fff;
-    font-weight: 800;
-    font-size: 20px;
-    line-height: 25px;
+    top: calc(55vh + 20px);
+    right: calc(5% + 20px);
+    width: 30px;
+    height: 30px;
+    border-radius: 3px;
+    background-color: #ed1d23;
     color: #fff;
-    z-index: 100;
+    font-size: 18px;
+    border: none;
+    z-index: 110;
 }
 .formPedidos-container {
-    background-color: rgba(26, 26, 26, 0.705);
+    background-color: rgba(26, 26, 26, 0.87);
     position: relative;
     display: flex;
     justify-content: center;
     top: 55vh;
     width: 90%;
     height: 270px;
+}
+.pedidos-confirmacion {
+  position: absolute;
+  width: 90%;
+  height: 270px;
+  top: 55vh;
+  z-index: 100;
+  display: flex;
+  justify-content: start;
+  align-items: flex-end;
+}
+.pedidos-confirmacion h1 {
+  font-size: 20px;
+  color: #ed1d23;
+  margin: 20px;
 }
 .h6Pedido{
   position: absolute;
@@ -45,6 +58,7 @@
     align-items: end;
 }
 .textareaPedido {
+  margin-top: 10px;
   resize: none;
 }
 .inputFecha {
@@ -104,6 +118,15 @@
       min-width: 340px;
       width: 30%;
       height: 300px;
+  }
+  .pedidos-confirmacion {
+    top: 25vh;
+      min-width: 340px;
+      width: 30%;
+      height: 300px;
+  }
+  .pedidos-confirmacion h1 {
+    margin: 40px 55px;
   }
   .formPedidos {
       height: 200px;
