--- a/src/Components/Pedido.css
+++ b/src/Components/Pedido.css
@@ -1,22 +1,27 @@
 .pedido-container {
     width: 120px;
     z-index: 300;
-    position: absolute;
     color: rgb(0, 0, 0);
-    background-color: rgba(255, 255, 255, 0.541);
+    background-color: antiquewhite;
+    height: 60px;
+    overflow-y: hidden;
+    position: absolute;
+    top: 0;
+    left: calc(50% - 100px);
+    opacity: 0;
 }
 .pedido-texto {
-    margin: 0px;
+    margin: 5px;
     font-size: 12px;
 }
 .pedido-ofrenda {
-    margin: 0px;
-    position: absolute;
-    bottom: 0;
-    left: 100px;
+    margin: 5px;
+    /*position: absolute;*/
+    top: 0px;
+    float: right;
     font-size: 24px;
 }
 .pedido-fecha {
     font-size: 10px;
-    margin: 0px;
+    margin: 5px;
 }
