--- a/src/Components/Pedido.css
+++ b/src/Components/Pedido.css
@@ -1,5 +1,20 @@
+@keyframes display {
+    0% {
+      transform: translateX(-1100px) translateY(0px);
+      opacity: 0;
+    }
+    50% {
+      transform: translateX(0) translateY(0px);
+      opacity: 1;
+    }
+    100% {
+      transform: translateX(1100px) translateY(0px);
+      opacity: 0;
+    }
+  }
+
 .pedido-container {
-    width: 120px;
+    width: 200px;
     z-index: 300;
     color: rgb(0, 0, 0);
     background-color: antiquewhite;
@@ -9,6 +24,7 @@
     top: 0;
     left: calc(50% - 100px);
     opacity: 0;
+    animation: display infinite ease;
 }
 .pedido-texto {
     margin: 5px;
