--- a/src/Layout/Home.css
+++ b/src/Layout/Home.css
@@ -17,10 +17,11 @@
     color: #fff;
 }
 .secciones-container {
-    position: relative ;
+    position: relative;
     width: calc(100% -  60px);
     margin-left: 30px;
-    height: calc(100vh - 230px);
+    margin-top: 30px;
+    height: calc(100vh - 260px);
 }
 .tituloSeccion-container{
     position: relative;
