--- a/src/Components/Publicacion.css
+++ b/src/Components/Publicacion.css
@@ -6,13 +6,17 @@
     flex-direction: row;
     align-items: center;
 }
+.publicacion-container:hover {
+    cursor: pointer;
+}
 .publicacion-container img {
-    
     width: 50px;
     height: 50px;
     left: 10px;
     top: 10px;
 }
+
 .publicacion-container p {
     margin-left: 15px;
 }
+
