--- a/src/Components/Pedido.css
+++ b/src/Components/Pedido.css
@@ -1,14 +1,14 @@
 @keyframes display {
     0% {
-      transform: translateX(-1100px) translateY(0px);
+      transform: translateX(0px) translateY(0px);
       opacity: 0;
     }
     50% {
-      transform: translateX(0) translateY(0px);
+      transform: translateX(0px) translateY(100px);
       opacity: 1;
     }
     100% {
-      transform: translateX(1100px) translateY(0px);
+      transform: translateX(0px) translateY(400px);
       opacity: 0;
     }
   }
@@ -18,7 +18,8 @@
     z-index: 300;
     color: rgb(0, 0, 0);
     background-color: antiquewhite;
-    height: 60px;
+    height: auto;
+    padding: 10px 0;
     overflow-y: hidden;
     position: absolute;
     top: 0;
@@ -36,6 +37,9 @@
     top: 0px;
     float: right;
     font-size: 24px;
+}
+.img-ofrenda {
+  width: 35px;
 }
 .pedido-fecha {
     font-size: 10px;
