--- a/src/Components/Pedidos.css
+++ b/src/Components/Pedidos.css
@@ -9,11 +9,13 @@
 @media screen and (min-width: 600px) {
     .pedidos-container {
         position: absolute;
-      top: 270px;
-      width: 50vw;
+        width: 200px;
+        height: 400px;
+        right: -200px;
+        background-color: blueviolet;
+        top: calc(50vh - 250px);
+        margin: 0;
       overflow: hidden;
-      height: 400px;
-      left: calc(50vw -400px) ;
     }
 
     
