--- a/src/Layout/Home.css
+++ b/src/Layout/Home.css
@@ -22,7 +22,7 @@
 .secciones-container {
     position: relative;
     width: calc(100% -  60px);
-    margin-left: 30px;
+    margin-right:200px;
     margin-top: 30px;
     height: calc(100vh - 260px);
 }
@@ -45,9 +45,8 @@
     }
     .secciones-container {
         position: absolute;
-        width: calc(100vw - 400px);
-        top: 120px;
-        left: 350px;
+        width: calc(100vw - 500px);
+        left: 250px;
         margin-left: 0px;
     }
     .tituloSeccion-container {
